// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallToAction renders a button only 1`] = `
<div
  className="callToAction buttonOnlyVariation"
  id="call-to-action"
>
  <div
    className="content"
  >
    <a
      className="button large link primary responsive spacing"
      href="http://www.example.com/"
    >
      Call To Action
    </a>
  </div>
</div>
`;

exports[`CallToAction renders a large size 1`] = `
<div
  className="callToAction largeVariation"
  id="call-to-action"
>
  <div
    className="image"
    style={
      Object {
        "backgroundImage": "url(https://kevin.sba.fun/http://example.com/someImage.jpg)",
      }
    }
    title="alt text for image"
  />
  <div
    className="content"
  >
    <h3>
      This is the headline for the CTA.
    </h3>
    <div>
      <hr
        className="dash"
        style={
          Object {
            "width": "1.611rem",
          }
        }
      />
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
    </div>
    <a
      className="button alternate large link primary responsive spacing"
      href="http://www.example.com/"
    >
      Call To Action
    </a>
  </div>
</div>
`;

exports[`CallToAction renders a medium size 1`] = `
<div
  className="callToAction mediumVariation"
  id="call-to-action"
>
  <div
    className="content"
  >
    <h3>
      This is the headline for the CTA.
    </h3>
    <div>
      <hr
        className="dash"
        style={
          Object {
            "width": "1.611rem",
          }
        }
      />
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
    </div>
    <a
      className="button alternate large link primary responsive spacing"
      href="http://www.example.com/"
    >
      Call To Action
    </a>
  </div>
</div>
`;

exports[`CallToAction renders a small size 1`] = `
<div
  className="callToAction smallVariation"
  id="call-to-action"
>
  <div
    className="content"
  >
    <h3>
      This is the headline for the CTA.
    </h3>
    <a
      className="button alternate large link primary responsive spacing"
      href="http://www.example.com/"
    >
      Call To Action
    </a>
  </div>
</div>
`;
